--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon index.js"
+    "start": "nodemon src/index.js"
   },
   "author": "sharanu mesta",
   "license": "ISC",
